[project]
name = "shop-the-look"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "safetensors",
    "dgenerate-ultralytics-headless",
    "streamlit",
    "Pillow",
    "pandas",
    "requests"
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
